# eufy-security-ws-python

./: .coverage  .gitignore  .pre-commit-config.yaml  AUTHORS.md  README.md  pylintrc  pyproject.toml  requirements_test.txt
.github/: pull_request_template.md
.github/workflows/: ci.yaml
eufy_security_ws/: __init__.py  client.py  errors.py  event.py
eufy_security_ws/model/: driver.py  station.py  version.py
eufy_security_ws/model/device/: __init__.py
eufy_security_ws_python/: __init__.py  client.py  const.py  event.py  version.py
eufy_security_ws_python/model/: __init__.py  device.py  driver.py  station.py  version.py
examples/: test_websocket.py
script/: test
tests/: conftest.py  test_client.py  test_event.py  test_version.py
tests/fixtures/: controller_state.json  event.json
tests/model/: __init__.py
